--- a/registry/src/components/Tabs/index.css
+++ b/registry/src/components/Tabs/index.css
@@ -1,22 +1,42 @@
 /* Tabs */
 .tabs {
-  @apply relative z-0 w-full;
+  @apply relative z-0 flex w-full;
+}
+
+.tabs.horizontal {
+  @apply flex-col;
+}
+
+.tabs.vertical {
+  @apply flex-row;
 }
 
 .tabs-nav {
-  @apply relative z-[99] flex w-full overflow-x-auto overflow-y-visible before:absolute before:bottom-0 before:left-0 before:block before:h-0.5 before:w-full before:bg-[var(--par-color-border-tab-container)] before:content-[''];
+  @apply relative z-[99] flex min-w-fit overflow-x-auto overflow-y-visible before:absolute before:bottom-0 before:left-0 before:block before:h-0.5 before:w-full before:bg-[var(--par-color-border-tab-container)] before:content-[''];
+}
+
+.tabs.horizontal .tabs-nav {
+  @apply flex-row;
+}
+
+.tabs.vertical .tabs-nav {
+  @apply flex-col before:h-full before:w-0.5;
 }
 
 .tab-button {
-  @apply text-body-compact-02 relative min-w-fit bg-[var(--par-color-bg-tab-item-enabled)] px-4 text-left text-[var(--par-color-text-tab-item-enabled)] transition-colors ease-in-out hover:bg-[var(--par-color-bg-tab-item-hovered)] hover:text-[var(--par-color-text-tab-item-hovered)];
+  @apply text-body-compact-02 relative min-w-fit bg-[var(--par-color-bg-tab-item-enabled)] px-4 text-left text-[var(--par-color-text-tab-item-enabled)] transition-colors duration-150 ease-in-out hover:bg-[var(--par-color-bg-tab-item-hovered)] hover:text-[var(--par-color-text-tab-item-hovered)];
 }
 
 .tab-button::after {
-  @apply absolute bottom-0 left-0 block h-0.5 w-full scale-x-0 transform transition-transform content-[''];
+  @apply absolute bottom-0 left-0 block transform transition-transform content-[''];
 }
 
-.tab-button::before {
-  @apply absolute bottom-0 left-0 block h-0.5 w-full content-[''];
+.tabs.vertical .tab-button::after {
+  @apply h-full w-0.5 scale-y-0;
+}
+
+.tabs.horizontal .tab-button::after {
+  @apply h-0.5 w-full scale-x-0;
 }
 
 .tabs.medium .tab-button {
@@ -35,43 +55,38 @@
   @apply bg-[var(--par-color-bg-tab-item-accent-active)] text-[var(--par-color-text-tab-item-accent-active)] after:scale-x-100 after:bg-[var(--par-color-border-tab-item-accent-active)];
 }
 
-.tab-button.from-right {
-  @apply after:origin-right;
+.tabs.horizontal .tab-button.active {
+  @apply after:scale-x-100;
 }
 
-.tab-button.from-left {
-  @apply after:origin-left;
+.tabs.vertical .tab-button.active {
+  @apply after:scale-y-100;
+}
+
+.tab-button.from-right::after {
+  @apply origin-right;
+}
+
+.tab-button.from-left::after {
+  @apply origin-left;
+}
+
+.tab-button.from-top::after {
+  @apply origin-top;
+}
+
+.tab-button.from-bottom::after {
+  @apply origin-bottom;
 }
 
 .tabs-body {
-  @apply relative z-0;
+  @apply relative z-0 grow;
 }
 
 .tab-content:not(.hidden) {
-  animation: fadeIn ease-in-out 0.3s;
+  animation: fadeIn ease-in-out 0.15s;
   @apply py-3;
 }
-
-.tabs.contained > .tabs-nav {
-  @apply rounded-t-md border border-b-0 border-gray-200 bg-gray-50 before:h-px;
-}
-
-.tabs.contained > .tabs-nav > .tab-button {
-  @apply z-10 mt-2 border-b bg-white shadow-md before:top-0 after:top-0;
-}
-
-.tabs.contained > .tabs-nav > .tab-button.active {
-  @apply border-b-0 bg-white;
-}
-
-.tabs.contained > .tabs-body {
-  @apply rounded-b-md border border-t-0 border-gray-200 bg-white;
-}
-
-.tabs.contained > .tabs-body > .tab-content:not(.hidden) {
-  @apply flex flex-col gap-2 px-4;
-}
-/* Tabs */
 
 @keyframes fadeIn {
   0% {
