--- a/registry/src/components/Toast/index.css
+++ b/registry/src/components/Toast/index.css
@@ -19,7 +19,7 @@
 }
 
 .toast {
-  box-shadow: 0px 10px 15px -3px rgb(from var(--par-color-text-primary) r g b / 0.1);
+  box-shadow: 0px 10px 15px -3px var(--par-color-effect-shadow);
   @apply text-body-compact-01 relative flex h-auto w-full items-center justify-center gap-3 overflow-hidden rounded-md border p-3 transition-all duration-300;
 }
 
