feat (tooltip): add all feature

--- a/registry/src/components/theme/alias/background.css
+++ b/registry/src/components/theme/alias/background.css
@@ -4,6 +4,7 @@
   --par-color-bg-alternative: var(--par-gray-25);
 
   --par-color-bg-surface: var(--par-gray-50);
+  --par-color-bg-surface-inverse: var(--par-gray-950);
   --par-color-bg-surface-alternative: var(--par-white);
   --par-color-bg-surface-indicator-neutral: var(--par-neutral-500);
   --par-color-bg-surface-indicator-accent: var(--par-accent-500);
@@ -39,6 +40,7 @@
   --par-color-bg-alternative: var(--par-gray-900);
 
   --par-color-bg-surface: var(--par-gray-900);
+  --par-color-bg-surface-inverse: var(--par-white);
   --par-color-bg-surface-alternative: var(--par-gray-800);
   --par-color-bg-surface-indicator-neutral: var(--par-neutral-500);
   --par-color-bg-surface-indicator-accent: var(--par-accent-500);
