--- a/registry/src/components/Switch/index.css
+++ b/registry/src/components/Switch/index.css
@@ -1,32 +1,32 @@
 /* base */
 .switch {
-  @apply relative box-content inline-flex shrink-0 cursor-pointer items-center rounded-full transition-colors duration-300;
+  @apply relative box-border shrink-0 cursor-pointer rounded-full -outline-offset-2 transition-colors duration-300;
 }
 
 .switch .switch-slider {
-  @apply absolute flex items-center justify-center rounded-full bg-white transition-transform duration-300;
+  @apply absolute left-px top-1/2 flex -translate-y-1/2 items-center justify-center rounded-full bg-[var(--par-color-bg-switch-target-handle)] transition-transform duration-300;
 }
 
 .switch:active .switch-slider,
 .switch:hover .switch-slider {
-  box-shadow: 0px 0px 1px 8px rgba(229, 231, 235, 0.2);
+  box-shadow: 0px 0px 1px 8px var(--par-color-effect-shadow);
 }
 
 .switch .switch-slider .switch-icon {
-  @apply text-gray-500;
+  @apply text-[var(--par-color-text-switch-target-unchecked-enabled)] transition-colors duration-300 ease-in-out;
 }
 
 /* color */
 .switch[aria-checked='true'] {
-  @apply border border-green-200 bg-green-500;
+  @apply border border-[var(--par-color-border-switch-target-checked)] bg-[var(--par-color-bg-switch-target-track-check)];
 }
 
 .switch[aria-checked='true'] .switch-slider .switch-icon {
-  @apply text-green-500;
+  @apply text-[var(--par-color-text-switch-target-checked-enabled)];
 }
 
 .switch[aria-checked='false'] {
-  @apply border border-gray-300 bg-gray-200;
+  @apply border border-[var(--par-color-border-switch-target-unchecked)] bg-[var(--par-color-bg-switch-target-track-uncheck)];
 }
 
 /* sizes */
@@ -38,16 +38,16 @@
   @apply h-5 w-5;
 }
 
+.switch.small:active .switch-slider {
+  @apply -left-px  h-6 w-6;
+}
+
 .switch.small .switch-slider .switch-icon {
   @apply h-4 w-4;
 }
 
 .switch.small[aria-checked='true'] .switch-slider {
-  @apply translate-x-[1.125rem]; /* sliderWidth - switchPadding */
-}
-
-.switch.small[aria-checked='false'] .switch-slider {
-  @apply translate-x-0.5;
+  @apply translate-x-4;
 }
 
 .switch.medium {
@@ -55,7 +55,11 @@
 }
 
 .switch.medium .switch-slider {
-  @apply h-7  w-7;
+  @apply h-7 w-7;
+}
+
+.switch.medium:active .switch-slider {
+  @apply -left-px h-8 w-8;
 }
 
 .switch.medium .switch-slider .switch-icon {
@@ -63,11 +67,7 @@
 }
 
 .switch.medium[aria-checked='true'] .switch-slider {
-  @apply translate-x-[1.625rem];
-}
-
-.switch.medium[aria-checked='false'] .switch-slider {
-  @apply translate-x-0.5;
+  @apply translate-x-6;
 }
 
 .switch.large {
@@ -78,14 +78,14 @@
   @apply h-9 w-9;
 }
 
+.switch.large:active .switch-slider {
+  @apply -left-px h-10 w-10;
+}
+
 .switch.large .switch-slider .switch-icon {
   @apply h-6 w-6;
 }
 
 .switch.large[aria-checked='true'] .switch-slider {
-  @apply translate-x-[2.125rem];
-}
-
-.switch.large[aria-checked='false'] .switch-slider {
-  @apply translate-x-0.5;
+  @apply translate-x-8;
 }
