--- a/registry/src/components/Switch/variables.css
+++ b/registry/src/components/Switch/variables.css
@@ -9,19 +9,19 @@
   --par-color-bg-switch-target-handle-disabled: rgb(from var(--par-white) r g b / 0.5);
 
   --par-color-bg-switch-target-state-layer-enabled: var(--par-transparent);
-  --par-color-bg-switch-target-state-layer-hovered: rgba(var(--par-gray-200), 0.25);
-  --par-color-bg-switch-target-state-layer-pressed: rgba(var(--par-gray-200), 0.25);
+  --par-color-bg-switch-target-state-layer-hovered: rgb(from var(--par-gray-200) r g b / 0.25);
+  --par-color-bg-switch-target-state-layer-pressed: rgb(from var(--par-gray-200) r g b / 0.25);
   --par-color-bg-switch-target-state-layer-disabled: var(--par-transparent);
 
   --par-color-bg-switch-target-track-uncheck: var(--par-gray-200);
-  --par-color-bg-switch-target-track-uncheck-disabled: rgba(var(--par-gray-200), 0.5);
+  --par-color-bg-switch-target-track-uncheck-disabled: rgb(from var(--par-gray-200) r g b / 0.25);
   --par-color-bg-switch-target-track-check: var(--par-green-550);
-  --par-color-bg-switch-target-track-check-disabled: rgba(var(--par-green-550), 0.5);
+  --par-color-bg-switch-target-track-check-disabled: rgb(from var(--par-green-550) r g b / 0.5);
 
-  --par-color-border-switch-target-unchecked: var(--par-gray-300);
-  --par-color-border-switch-target-unchecked-disabled: rgba(var(--par-gray-300), 0.5);
-  --par-color-border-switch-target-checked: var(--par-green-200);
-  --par-color-border-switch-target-checked-disabled: rgba(var(--par-green-200), 0.5);
+  --par-color-border-switch-unchecked: var(--par-gray-300);
+  --par-color-border-switch-unchecked-disabled: rgb(from var(--par-gray-300) r g b / 0.5);
+  --par-color-border-switch-checked: var(--par-green-200);
+  --par-color-border-switch-checked-disabled: rgb(from var(--par-green-200) r g b / 0.5);
   --par-color-outlined-surface-item-focused: var(--par-black);
 }
 
@@ -35,18 +35,18 @@
   --par-color-bg-switch-target-handle-disabled: rgb(from var(--par-white) r g b / 0.5);
 
   --par-color-bg-switch-target-state-layer-enabled: var(--par-transparent);
-  --par-color-bg-switch-target-state-layer-hovered: rgba(var(--par-gray-700), 0.25);
-  --par-color-bg-switch-target-state-layer-pressed: rgba(var(--par-gray-700), 0.25);
+  --par-color-bg-switch-target-state-layer-hovered: rgb(from var(--par-gray-700) r g b / 0.25);
+  --par-color-bg-switch-target-state-layer-pressed: rgb(from var(--par-gray-700) r g b / 0.25);
   --par-color-bg-switch-target-state-layer-disabled: var(--par-transparent);
 
   --par-color-bg-switch-target-track-uncheck: var(--par-gray-800);
-  --par-color-bg-switch-target-track-uncheck-disabled: rgba(var(--par-gray-800), 0.5);
+  --par-color-bg-switch-target-track-uncheck-disabled: rgb(from var(--par-gray-800) r g b / 0.5);
   --par-color-bg-switch-target-track-check: var(--par-green-800);
-  --par-color-bg-switch-target-track-check-disabled: rgba(var(--par-green-800), 0.5);
+  --par-color-bg-switch-target-track-check-disabled: rgb(from var(--par-green-800) r g b / 0.5);
 
-  --par-color-border-switch-target-unchecked: var(--par-gray-600);
-  --par-color-border-switch-target-unchecked-disabled: rgba(var(--par-gray-600), 0.5);
-  --par-color-border-switch-target-checked: var(--par-green-600);
-  --par-color-border-switch-target-checked-disabled: rgba(var(--par-green-600), 0.5);
+  --par-color-border-switch-unchecked: var(--par-gray-600);
+  --par-color-border-switch-unchecked-disabled: rgb(from var(--par-gray-600) r g b / 0.5);
+  --par-color-border-switch-checked: var(--par-green-600);
+  --par-color-border-switch-checked-disabled: rgb(from var(--par-green-600) r g b / 0.5);
   --par-color-outlined-surface-item-focused: var(--par-white);
 }
